--- a/ng-admin/src/documents/document/category/qr-code-category/qr-code-category.component.html
+++ b/ng-admin/src/documents/document/category/qr-code-category/qr-code-category.component.html
@@ -33,7 +33,7 @@
         <!-- 功能按钮 -->
         <div class="custom-modal-footer">
             <div class="custom-modal-footter-group">
-                <button nz-button type="button" [disabled]="saving" (click)="close()">
+                <button nz-button type="button" (click)="close()">
                     取消
                 </button>
                 <button nz-button [nzType]="'primary'" type="button" (click)="submit()">
