--- a/ng-admin/src/documents/document/list/list.component.html
+++ b/ng-admin/src/documents/document/list/list.component.html
@@ -8,7 +8,8 @@
         </ng-template>
     </div>
     <div nz-col nzSpan="6" style="text-align:center;">
-        <button nz-button nzType="default" (click)="download()" [nzLoading]="downloading"><i class="anticon anticon-download"></i>下载二维码</button>
+        <button nz-button nzType="default" (click)="download()" [nzLoading]="downloading"><i
+                class="anticon anticon-download"></i>下载二维码</button>
         <button nz-button (click)="create()" nzShape="circle" nzType="primary">
             <i class="anticon anticon-plus"></i>
         </button>
@@ -20,9 +21,9 @@
 <div nz-row>
     <div nz-col nzSpan="24">
         <ng-template #totalTemplate let-total>共 {{query.total}} 条</ng-template>
-        <nz-table #nzTable [nzFrontPagination]="false" [nzShowTotal]="totalTemplate" [nzTotal]="query.total" [nzData]="docs"
-            [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
-            (nzPageIndexChange)="refreshData(false)" (nzPageSizeChange)="refreshData(false)">
+        <nz-table #nzTable [nzFrontPagination]="false" [nzShowTotal]="totalTemplate" [nzTotal]="query.total"
+            [nzData]="docs" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading"
+            [nzShowSizeChanger]="true" (nzPageIndexChange)="refreshData(false)" (nzPageSizeChange)="refreshData(false)">
             <thead>
                 <tr>
                     <th>资料名称</th>
