--- a/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
+++ b/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
@@ -19,9 +19,11 @@
                             <nz-form-label nz-col [nzSm]="4" nzRequired>烟农姓名</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
                                 <input nz-input formControlName="name" [(ngModel)]="grower.name" id="name">
-                                <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('maxlength')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('maxlength')">
                                     字符长度小于等于50</nz-form-explain>
-                                <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('required')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('required')">
                                     请输入烟农姓名</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -30,13 +32,16 @@
                             <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="unitCode">单位名称</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
                                 <nz-select formControlName="unitCode" [nzPlaceHolder]="'请选择单位名称'" name="unitCode"
-                                    [(ngModel)]="grower.unitCode" (ngModelChange)="getText($event)" [nzShowSearch]="true">
+                                    [(ngModel)]="grower.unitCode" (ngModelChange)="getText($event)"
+                                    [nzShowSearch]="true">
                                     <nz-option *ngFor="let i of unitTypes" [nzLabel]="i.text" [nzValue]="i.value">
                                     </nz-option>
                                 </nz-select>
-                                <nz-form-explain *ngIf="validateForm.get('unitCode').dirty&&validateForm.get('unitCode').hasError('maxlength')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('unitCode').dirty&&validateForm.get('unitCode').hasError('maxlength')">
                                     字符长度小于等于50</nz-form-explain>
-                                <nz-form-explain *ngIf="validateForm.get('unitCode').dirty&&validateForm.get('unitCode').hasError('required')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('unitCode').dirty&&validateForm.get('unitCode').hasError('required')">
                                     请选择单位</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -45,11 +50,13 @@
                             <nz-form-control [nzSm]="16" nzHasFeedback>
                                 <input nz-input readonly="readonly" placeholder="请选择烟技员" formControlName="employeeName"
                                     id="employeeName" [(ngModel)]="grower.employeeName">
-                                <nz-form-explain *ngIf="validateForm.get('employeeName').dirty&&validateForm.get('employeeName').hasError('maxlength')">字符长度小于等于200</nz-form-explain>
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('employeeName').dirty&&validateForm.get('employeeName').hasError('maxlength')">
+                                    字符长度小于等于200</nz-form-explain>
                             </nz-form-control>
                             <nz-form-control [nzSm]="4" style="float: right;">
-                                <button nz-button type="button" nzType="primary" (click)="showModal()" [acl]="'CityAdmin'"
-                                    style="margin-left: 20px">选择烟技员</button>
+                                <button nz-button type="button" nzType="primary" (click)="showModal()"
+                                    [acl]="'CityAdmin'" style="margin-left: 20px">选择烟技员</button>
                             </nz-form-control>
                         </nz-form-item>
 
@@ -67,15 +74,18 @@
                             <nz-form-label nz-col [nzSm]="4" nzFor="year">业务年度</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
                                 <input nz-input formControlName="year" id="year" [(ngModel)]="grower.year">
-                                <nz-form-explain *ngIf="validateForm.get('year').dirty&&validateForm.get('year').hasError('pattern')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('year').dirty&&validateForm.get('year').hasError('pattern')">
                                     请输入正整数</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="contractNo">合同编号</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
-                                <input nz-input formControlName="contractNo" id="contractNo" [(ngModel)]="grower.contractNo">
-                                <nz-form-explain *ngIf="validateForm.get('contractNo').dirty&&validateForm.get('contractNo').hasError('maxlength')">
+                                <input nz-input formControlName="contractNo" id="contractNo"
+                                    [(ngModel)]="grower.contractNo">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('contractNo').dirty&&validateForm.get('contractNo').hasError('maxlength')">
                                     字符长度小于等于50</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -84,17 +94,21 @@
                             <nz-form-label nz-col [nzSm]="4" nzFor="tel">联系电话</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
                                 <input nz-input formControlName="tel" id="tel" [(ngModel)]="grower.tel">
-                                <nz-form-explain *ngIf="validateForm.get('tel').dirty&&validateForm.get('tel').hasError('maxlength')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('tel').dirty&&validateForm.get('tel').hasError('maxlength')">
                                     字符长度小于等于11</nz-form-explain>
-                                <nz-form-explain *ngIf="validateForm.get('tel').dirty&&validateForm.get('tel').hasError('pattern')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('tel').dirty&&validateForm.get('tel').hasError('pattern')">
                                     请输入纯数字</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="villageGroup">村组</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
-                                <input nz-input formControlName="villageGroup" id="villageGroup" [(ngModel)]="grower.villageGroup">
-                                <nz-form-explain *ngIf="validateForm.get('villageGroup').dirty&&validateForm.get('villageGroup').hasError('maxlength')">
+                                <input nz-input formControlName="villageGroup" id="villageGroup"
+                                    [(ngModel)]="grower.villageGroup">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('villageGroup').dirty&&validateForm.get('villageGroup').hasError('maxlength')">
                                     字符长度小于等于50</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -102,7 +116,8 @@
                             <nz-form-label nz-col [nzSm]="4" nzFor="address">详细住址</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
                                 <input nz-input formControlName="address" id="address" [(ngModel)]="grower.address">
-                                <nz-form-explain *ngIf="validateForm.get('address').dirty&&validateForm.get('address').hasError('maxlength')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('address').dirty&&validateForm.get('address').hasError('maxlength')">
                                     字符长度小于等于500</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -110,12 +125,14 @@
                             <nz-form-label nz-col [nzSm]="4" nzFor="plantingArea">约定种植面积</nz-form-label>
                             <nz-form-control [nzSm]="20">
                                 <nz-input-group nzSearch [nzSuffix]="suffixIconButton">
-                                    <input nz-input formControlName="plantingArea" id="plantingArea" [(ngModel)]="grower.plantingArea">
+                                    <input nz-input formControlName="plantingArea" id="plantingArea"
+                                        [(ngModel)]="grower.plantingArea">
                                     <ng-template #suffixIconButton>
                                         <button nz-button nzType="primary" disabled nzSearch>亩</button>
                                     </ng-template>
                                 </nz-input-group>
-                                <nz-form-explain *ngIf="validateForm.get('plantingArea').dirty&&validateForm.get('plantingArea').hasError('pattern')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('plantingArea').dirty&&validateForm.get('plantingArea').hasError('pattern')">
                                     请输入非负数(最大两位精度)，如50.00</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -123,12 +140,14 @@
                             <nz-form-label nz-col [nzSm]="4" nzFor="unitVolume">预计单产</nz-form-label>
                             <nz-form-control [nzSm]="20">
                                 <nz-input-group nzSearch [nzSuffix]="volumeButton">
-                                    <input nz-input formControlName="unitVolume" id="unitVolume" [(ngModel)]="grower.unitVolume">
+                                    <input nz-input formControlName="unitVolume" id="unitVolume"
+                                        [(ngModel)]="grower.unitVolume">
                                     <ng-template #volumeButton>
                                         <button nz-button nzType="primary" disabled nzSearch>担/亩</button>
                                     </ng-template>
                                 </nz-input-group>
-                                <nz-form-explain *ngIf="validateForm.get('unitVolume').dirty&&validateForm.get('unitVolume').hasError('pattern')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('unitVolume').dirty&&validateForm.get('unitVolume').hasError('pattern')">
                                     请输入非负数(最大两位精度)，如50.00</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -142,15 +161,17 @@
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="contractTime">合同签订时间</nz-form-label>
                             <nz-form-control [nzSm]="20">
-                                <nz-date-picker formControlName="contractTime" [nzFormat]="yyyy/MM/dd" [(ngModel)]="grower.contractTime"
-                                    [nzPlaceHolder]="'请选择日期'"></nz-date-picker>
+                                <nz-date-picker formControlName="contractTime" [nzFormat]="yyyy/MM/dd"
+                                    [(ngModel)]="grower.contractTime" [nzPlaceHolder]="'请选择日期'"></nz-date-picker>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="longitude">经度</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
-                                <input nz-input formControlName="longitude" id="longitude" [(ngModel)]="grower.longitude">
-                                <nz-form-explain *ngIf="validateForm.get('longitude').dirty&&validateForm.get('longitude').hasError('plantingArea')">
+                                <input nz-input formControlName="longitude" id="longitude"
+                                    [(ngModel)]="grower.longitude">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('longitude').dirty&&validateForm.get('longitude').hasError('plantingArea')">
                                     字符长度小于等于500</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -158,7 +179,8 @@
                             <nz-form-label nz-col [nzSm]="4" nzFor="latitude">纬度</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
                                 <input nz-input formControlName="latitude" id="latitude" [(ngModel)]="grower.latitude">
-                                <nz-form-explain *ngIf="validateForm.get('latitude').dirty&&validateForm.get('latitude').hasError('plantingArea')">
+                                <nz-form-explain
+                                    *ngIf="validateForm.get('latitude').dirty&&validateForm.get('latitude').hasError('plantingArea')">
                                     字符长度小于等于500</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
@@ -181,8 +203,8 @@
                 <button nz-button [nzType]="'default'" (click)="return()">
                     {{l("返回")}}
                 </button>
-                <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)" [nzLoading]="isConfirmLoading"
-                    [acl]="'CityAdmin'">
+                <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)"
+                    [nzLoading]="isConfirmLoading" [acl]="'CityAdmin'">
                     {{l("删除")}}
                 </button>
                 <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading"
@@ -226,8 +248,9 @@
                 <tbody>
                     <tr *ngFor="let data of nzTable.data">
                         <td>
-                            <nz-avatar *ngFor="let imgurl of data.imgPaths" [nzSrc]="(imgurl | hostUrl)" style="width:80px;height: 80px; margin-right: 5px;"
-                                (click)="handlePreview(imgurl)" [nzSize]="'large'" [nzShape]="'square'">
+                            <nz-avatar *ngFor="let imgurl of data.imgPaths" [nzSrc]="(imgurl | hostUrl)"
+                                style="width:80px;height: 80px; margin-right: 5px;" (click)="handlePreview(imgurl)"
+                                [nzSize]="'large'" [nzShape]="'square'">
                             </nz-avatar>
                         </td>
                         <td>{{data.employeeName}}</td>
@@ -246,7 +269,7 @@
             </footer-toolbar>
         </nz-card>
     </nz-tab>
-    <nz-tab nzTitle="面积落实">
+    <nz-tab nzTitle="面积核实">
         <nz-card [nzBordered]="false" *ngIf="grower">
             <div nz-row nzGutter="16">
                 <div nz-col nzXs="24" nzSm="25">
@@ -261,20 +284,20 @@
                         </desc-list-item>
                         <desc-list-item term="预计交售量">{{grower.plantingArea * grower.unitVolume | number:'1.2-2'}} 担
                         </desc-list-item>
-                        <desc-list-item term="面积落实状态">{{grower.areaStatusName}}</desc-list-item>
-                        <desc-list-item *ngIf="grower.actualArea" term="面积落实">{{grower.actualArea | number:'1.2-2'}} 亩
+                        <desc-list-item term="面积核实状态">{{grower.areaStatusName}}</desc-list-item>
+                        <desc-list-item *ngIf="grower.actualArea" term="面积核实">{{grower.actualArea | number:'1.2-2'}} 亩
                         </desc-list-item>
-                        <desc-list-item *ngIf="grower.areaTime" term="面积落实时间">{{grower.areaTime |_date}}
+                        <desc-list-item *ngIf="grower.areaTime" term="面积核实时间">{{grower.areaTime |_date}}
                         </desc-list-item>
                     </desc-list>
                 </div>
             </div>
 
             <ng-template #totalTemplate let-total>共 {{queryGAR.totalGAR}} 条</ng-template>
-            <nz-table #nzTableGAR [nzData]="growerAreaRecordList" [nzFrontPagination]="false" [nzTotal]="queryGAR.totalGAR"
-                [nzShowTotal]="totalTemplate" [(nzPageIndex)]="queryGAR.pageIndexGAR" [(nzPageSize)]="queryGAR.pageSizeGAR"
-                [nzLoading]="loadingGAR" [nzShowSizeChanger]="true" (nzPageIndexChange)="getGrowerAreaRecord()"
-                (nzPageSizeChange)="getGrowerAreaRecord()">
+            <nz-table #nzTableGAR [nzData]="growerAreaRecordList" [nzFrontPagination]="false"
+                [nzTotal]="queryGAR.totalGAR" [nzShowTotal]="totalTemplate" [(nzPageIndex)]="queryGAR.pageIndexGAR"
+                [(nzPageSize)]="queryGAR.pageSizeGAR" [nzLoading]="loadingGAR" [nzShowSizeChanger]="true"
+                (nzPageIndexChange)="getGrowerAreaRecord()" (nzPageSizeChange)="getGrowerAreaRecord()">
                 <thead>
                     <tr>
                         <th>计划名称</th>
@@ -292,8 +315,9 @@
                                 [nzColor]="'#2db7f5'">当前采用</nz-tag>
                         </td>
                         <td>
-                            <nz-avatar *ngFor="let imgurl of data.imgPaths" [nzSrc]="(imgurl | hostUrl)" style="width:80px;height: 80px; margin-right: 5px;"
-                                (click)="handlePreview(imgurl)" [nzSize]="'large'" [nzShape]="'square'">
+                            <nz-avatar *ngFor="let imgurl of data.imgPaths" [nzSrc]="(imgurl | hostUrl)"
+                                style="width:80px;height: 80px; margin-right: 5px;" (click)="handlePreview(imgurl)"
+                                [nzSize]="'large'" [nzShape]="'square'">
                             </nz-avatar>
                         </td>
                         <td>{{data.location}}</td>
@@ -312,7 +336,8 @@
         </nz-card>
     </nz-tab>
 </nz-tabset>
-<nz-modal [nzVisible]="previewVisible" [nzContent]="modalContent" [nzFooter]="null" [nzWidth]="550" (nzOnCancel)="previewVisible=false">
+<nz-modal [nzVisible]="previewVisible" [nzContent]="modalContent" [nzFooter]="null" [nzWidth]="550"
+    (nzOnCancel)="previewVisible=false">
     <ng-template #modalContent>
         <img [src]="(previewImage | hostUrl)" [ngStyle]="{ 'width': '100%' }" />
     </ng-template>
